<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/class_name_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/grade_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/grade_1" />

    <EditText
        android:id="@+id/grade_1"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/class_name_1"
        app:layout_constraintTop_toBottomOf="@+id/grade_percent_label" />

    <EditText
        android:id="@+id/grade_2"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/class_name_2"
        app:layout_constraintTop_toBottomOf="@+id/grade_1" />

    <TextView
        android:id="@+id/class_name_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/grade_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/grade_2" />

    <EditText
        android:id="@+id/grade_3"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/class_name_3"
        app:layout_constraintTop_toBottomOf="@+id/grade_2" />

    <TextView
        android:id="@+id/class_name_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/grade_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/grade_3" />

    <TextView
        android:id="@+id/max_grade_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/max_grade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grade_3" />

    <TextView
        android:id="@+id/max_grade_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toEndOf="@+id/max_grade_label"
        app:layout_constraintTop_toTopOf="@+id/max_grade_label" />

    <TextView
        android:id="@+id/min_grade_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_grade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/max_grade_label" />

    <TextView
        android:id="@+id/min_grade_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/min_grade_label"
        app:layout_constraintTop_toBottomOf="@+id/max_grade_num" />

    <TextView
        android:id="@+id/avg_grade_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avg_grade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.353"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/min_grade_label" />

    <TextView
        android:id="@+id/avg_grade_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintStart_toEndOf="@+id/avg_grade_label"
        app:layout_constraintTop_toBottomOf="@+id/min_grade_num" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="88dp"
        android:layout_height="56dp"
        android:text="@string/submit_b1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onClickSubmit"/>

    <Button
        android:id="@+id/next_page"
        android:layout_width="197dp"
        android:layout_height="56dp"
        android:text="@string/register_b1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/letter_grade_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/grade_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/grade_1"
        app:layout_constraintTop_toTopOf="@+id/grade_1" />

    <TextView
        android:id="@+id/letter_grade_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/grade_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toEndOf="@+id/grade_2"
        app:layout_constraintTop_toTopOf="@+id/grade_2"
        app:layout_constraintVertical_bias="0.526" />

    <TextView
        android:id="@+id/letter_grade_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/grade_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/grade_3"
        app:layout_constraintTop_toTopOf="@+id/grade_3" />

    <TextView
        android:id="@+id/class_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/class_name_label"
        app:layout_constraintStart_toStartOf="@+id/class_name_1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/grade_percent_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/grade_percent_label"
        app:layout_constraintEnd_toStartOf="@+id/letter_grade_label"
        app:layout_constraintStart_toEndOf="@+id/class_name_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/letter_grade_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/letter_grade"
        app:layout_constraintEnd_toEndOf="@+id/letter_grade_1"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>